# winmusik

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  Doxyfile  HISTORY.TXT  INSTALL.TXT  Makefile.in  README.md  README_de.TXT  README_en.TXT  TODO.TXT  WinMusik.files  WinMusik.includes  WinMusik.pro  WinMusik.pro.header  WinMusik.pro.in  WinMusik3.pro  aclocal.m4  build_binary.sh  build_mingw64.sh  build_package.sh  cdani.avi  conf.sh  configure  configure.ac  genConfigure  german.lng  german.txt  makedist.pl  merge_ppl6.sh  merge_pplib.sh  mingw_deps.sh  readme.txt  resources.qrc  setup.iss  setup64.iss  update.sh  update_version.sh  (+6 more)
.github/workflows/: ccpp.yml
Code/: Copyright.frx  START2.FRX  UPDATE.FRX  Utility.bas  WM20.BAS  WinMusik20.vbw  cdnum.vbp  cdnumform.frm  cdplayer.bas  cdread.frm  charts.frx  chartstamm.frm  coverdr.frm  coverdruck.frm  definitionen.bas  eingabe.frm  global.bas  iniwin40.bas  menu1.frm  mixer.frm  mp3rename.frx  pfp.bas  property1.frx  quicks.frx  sqlexport.frm  status.frm  titelinf.frm  vcdcover.frm  winmusik20.SWT
Package/: .gitignore  build_freebsd_port.sh  build_package_old.sh  build_source.sh  build_ubuntu.sh  config.sh  configure.ac  setup64.iss
Package/FreeBSD/winmusik/: Makefile  pkg-descr
autoconf/: ax_check_compile_flag.m4  ax_check_compiler_flags.m4  ax_check_zlib.m4  ax_find_qmake.m4  checkfuncs.m4  gtest.m4  iconv.m4  lame.m4  libcdio.m4
dll/: mp3.h  titel.cpp  wm20.def  wm20.dsp  wm20.dsw  wm20.sln  wm20.vcproj
dll-ppl6/: CTagSaver.cpp  wm20.vcproj
docs/: DoxygenLayout.xml  Userguide_de.odt  chunks.dox  fileformat31.dox  groups.dox  header.html  main.dox
docs/CVS/: Entries
forms/: about.ui  coverviewer.ui  edit.ui  edittrack.cpp  firststart.ui  langselect.ui  menue.ui  properties.ui  search.ui  searchlistdialog.ui  searchlists.ui  tablesearch.ui
forms/CVS/: Entries  Repository
gui/: .gitignore  WinMusik.pro.header  WinMusik.pro.in  resource.rc  resources.qrc  winmusik_de.qm  winmusik_de.ts  winmusik_en.qm  winmusik_en.ts
gui/forms/: about.ui  asynchronousMessage.ui  coverprinter.ui  coverviewer.ui  printdevicedialog.ui
gui/include/: about.h  asynchronousMessage.h  backgroundjobs.h  colorscheme.h  coverdownloadmanager.h  coverprinter.h  coverviewer.h  csearchlist.h  devicelist.h  droparea.h  editdevice.h  edittrackdialog.h  exceptions.h  firststart.h  langselect.h  musickey.h  plugins.h  printdevicedialog.h  regexpcapture.h  resultfilter.h  splashscreen.h  tablecontrol.h  traktor.h  version.h  winmusik3.h  wm20import.h  wm_regexpcapture.h  wmstorage.h  wmtoolbutton.h
gui/resources/: .cvsignore  tr32x32-0018.pct
gui/src/: CHashes.cpp  CID3TagSaver.cpp  CSearchlist.cpp  CStorage.cpp  CTableControl.cpp  CTrackList.cpp  CWmClient.cpp  CWmFile.cpp  DropArea.cpp  InitialDatabase.cpp  Print.cpp  StorageDevice.cpp  StorageOriginalImportData.cpp  StorageShortcut.cpp  StorageSimpleTable.cpp  StorageTitle.cpp  StorageTrack.cpp  about.cpp  asynchronousMessage.cpp  backgroundjobs.cpp  colorscheme.cpp  config.cpp  coverdownloadmanager.cpp  coverprinter.cpp  editdevice.cpp  edittrackdialog.cpp  errors.cpp  firststart.cpp  functions.cpp  langselect.cpp  main.cpp  musickey.cpp  printdevicedialog.cpp  regexpcapture.cpp  resultfilter.cpp  traktor.cpp  wm20import.cpp  wmfunctions.cpp  wmtoolbutton.cpp
gui/widgets/: KeyWheel.cpp  edittrack.cpp  edittrack.h  fkeys.cpp  fkeys.h  fkeys.ui  keywheel.h  wmcoverwidget.cpp  wmcoverwidget.h  wmcoverwidget.ui  wmtoolbutton.cpp  (+1 more)
include/: colorscheme.h  coverviewer.h  csearchlist.h  edit.h  editdevice.h  edittrackdialog.h  langselect.h  massimport.h  menue.h  musickey.h  properties.h  regexpcapture.h  resultfilter.h  search.h  searchlistdialog.h  searchlists.h  searchlisttrackdialog.h  tablecontrol.h  updater.h  version.h  winmusik3.h  wm20import.h  wmstorage.h
lib/: .gitignore  Makefile  Makefile.in  WinMusikLibrary.files  WinMusikLibrary.includes  aclocal.m4  build.sh  configure  configure.ac  genConfigure
lib/autoconf/: gtest.m4
lib/include/: .gitignore  cwmfile.h  libwinmusik3.h  traktor.h  wm_config.h.in  wm_cwmfile.h  wm_dataobjects.h  wm_exceptions.h  wm_functions.h  wm_id3tagsaver.h  wm_musicalkeys.h  wm_playlist.h  wm_searchlist.h  wm_traktor.h
lib/src/: CDatabase.cpp  CID3TagSaver.cpp  CWMFile.cpp  Playlist.cpp  Searchlist.cpp  functions.cpp  object_storagedata.cpp  object_title.cpp  regexpcapture.cpp  storage.cpp  traktor.cpp
lib/tests/: .gitignore  Makefile  Makefile.in
lib/tests/src/: cwmfile.cpp  database.cpp  id3tagsaver.cpp  main.cpp  object_datatitle.cpp  playlist.cpp  regexpcapture.cpp  storage.cpp  traktor.cpp
lib/tests/testdata/: beatport_titlelist_clipboard.html  regexp.conf
ppl6/: Makefile.in  genMakefile.in
pplib/: .gitignore  Makefile.in  genMakefile.in
resources/: countries.csv  pspbrwse.jbf
setup/: vollversion.iss
src/: CHashes.cpp  CID3TagSaver.cpp  CSearchlist.cpp  CStorage.cpp  CWmClient.cpp  CWmFile.cpp  Print.cpp  StorageDevice.cpp  StorageOriginalImportData.cpp  StorageSimpleTable.cpp  StorageTitle.cpp  StorageTrack.cpp  about.cpp  backgroundjobs.cpp  config.cpp  coverprinter.cpp  coverviewer.cpp  devicelist.cpp  edit-functions.cpp  edit.cpp  editdevice.cpp  edittrackdialog.cpp  errors.cpp  functions.cpp  main.cpp  massimport.cpp  menue.cpp  musickey.cpp  oimpinfo.cpp  plugins.cpp  printdevicedialog.cpp  properties.cpp  regexpcapture.cpp  registration.cpp  resultfilter.cpp  search.cpp  searchlistdialog.cpp  searchlists.cpp  searchlisttrackdialog.cpp  shortcutdialog.cpp  (+3 more)
system/: Setup.Lst
trunk/: .cproject  .project  Doxyfile  HISTORY.TXT  INSTALL.TXT  README_de.TXT  README_en.TXT  TODO.TXT  WinMusik.pro  WinMusik3.pro  WinMusikURL.txt  build_binary.sh  build_package.sh  build_source.sh  english.lng  english.txt  german.ln5  history.txt  resources.qrc  setup.iss  setup_with_src.iss  tabellen.txt  winmusik20.vbw  winmusik_de.qm  winmusik_de.ts  winmusik_en.qm  winmusik_en.ts
update/: update.vcproj  winmusik.h
widgets/: KeyWheel.cpp  edittrack.cpp  edittrack.h  keywheel.h
wmlib/: .gitignore  Makefile.in
(+863 files in other folders)
